SAK-33315 Assignments list page showing incorrect status

--- a/assignment/tool/src/webapp/vm/assignment/chef_assignments_instructor_list_submissions.vm
+++ b/assignment/tool/src/webapp/vm/assignment/chef_assignments_instructor_list_submissions.vm
@@ -622,7 +622,7 @@ function printView(url) {
 											#if (!$!submission.submitted)
 												#set($submittedText = $!submission.submittedText)
 												#set($submittedAttachments = $submission.submittedAttachments)
-												#if ($!submittedText.length() > 0 || $!submittedAttachments.size() > 0 )
+												#if ($submittedText && !$submittedText.isEmpty() || !$submittedAttachments.isEmpty())
 												<span class="highlight">$tlang.getString("gen.dra2") </span>
 												#end
 											#end
