--- a/assignment/tool/src/webapp/vm/assignment/chef_assignments_instructor_reorder_assignment.vm
+++ b/assignment/tool/src/webapp/vm/assignment/chef_assignments_instructor_reorder_assignment.vm
@@ -94,17 +94,17 @@
 					<input type="text" size="3" value="$count" id="index$count"/>
 					<input type="hidden"  size="3" id="holder$count"  value="$count" tabindex="-2"/>
 				</span>
-				<span class="title col-md-6 col-sm-6 col-xs-12" title="$validator.escapeHtml($!assignment.getTitle())">
-					#if ($!assignment.draft)
+				<span class="title col-md-6 col-sm-6 col-xs-12" title="$validator.escapeHtml($!assignment.Title)">
+					#if ($!assignment.Draft)
 						<em class="highlight" style="font-style:normal">$tlang.getString("gen.dra2")</em>
 					#end
-					$validator.escapeHtml($validator.limit($!assignment.getTitle(), 45))
+					$validator.escapeHtml($validator.limit($!assignment.Title, 45))
 				</span>
 				<span class="col-md-3 col-sm-3 col-xs-12">
-					$!assignment.openTime.toStringLocalFull()
+					$!assignment.OpenDate.toString()
 				</span>
 				<span class="col-md-3 col-sm-3 col-xs-12">
-					$!assignment.dueTime.toStringLocalFull()
+					$!assignment.DueDate.toString()
 					<select name="position_$validator.escapeUrl("$assignment.id")" class="selectSet">
 						#foreach($i in [1..$assignmentsize])
 						<option value="$i"#if("$i" == "$count") selected="selected"#end>$i</option>
