SAK-31520 Restore and fix the 'Add Another Web Link' action on the 'Add Web Links (URLs)' workflow

--- a/content/content-tool/tool/src/webapp/vm/resources/sakai_properties_scripts.vm
+++ b/content/content-tool/tool/src/webapp/vm/resources/sakai_properties_scripts.vm
@@ -396,14 +396,7 @@
 		{
 			var newContentDiv = copyTree(modelContentDiv, index);
 			fileInputDiv.appendChild(newContentDiv);
-		}
-		
-		var modelPropertiesDiv = document.getElementById("propertiesDiv$DOT" + prevIndex);
-		if(modelPropertiesDiv)
-		{
-			var newPropertiesDiv = copyTree(modelPropertiesDiv, index);
-			newPropertiesDiv.style.display = "none";
-			fileInputDiv.appendChild(newPropertiesDiv);
+
 			var addDetailsLink = document.getElementById("propsTrigger${DOT}" + index);
 			if(addDetailsLink)
 			{
@@ -1476,7 +1469,11 @@
 	
 	
 	attachEventHandlers();
-	
+
+// default these values always
+document.calendars = new Array();
+document.calendarcounter = 0;
+
 #if($calendarcounter > 0)	
 	document.calendars = new Array();
 	document.calendarcounter = $calendarcounter;
