SAK-33317 Assignments grade point display improvements
- removed FormattedText Cover
- getMaxGradePointDisplay now uses getGradeDisplay
- Added unit tests for getGradeDisplay

--- a/assignment/tool/src/webapp/vm/assignment/chef_assignments_list_assignments.vm
+++ b/assignment/tool/src/webapp/vm/assignment/chef_assignments_list_assignments.vm
@@ -511,7 +511,7 @@
 										A-F
 									#elseif ($gradeScale == 3)
 										## Score based grade type
-										0-$assignment.getMaxGradePointDisplay()
+										0-$!service.getMaxPointGradeDisplay($assignment.ScaleFactor, $assignment.MaxGradePoint)
 									#elseif ($gradeScale == 4)
 										## Pass/fail grade type
 										$tlang.getString("gen.pf")
