--- a/sections/sections-app/src/webapp/css/sections.css
+++ b/sections/sections-app/src/webapp/css/sections.css
@@ -130,5 +130,7 @@ table.narrowTable tr th {
 /* Indent options checkboxes */
 .indent {text-indent: 1em;}
 
-
+.ui-dialog-titlebar-close {
+    visibility: hidden;
+}
 
