--- a/assignment/tool/src/webapp/vm/assignment/chef_assignments_student_view_group_error.vm
+++ b/assignment/tool/src/webapp/vm/assignment/chef_assignments_student_view_group_error.vm
@@ -1,3 +1,4 @@
+<!-- start: chef_assignments_student_view_group_error.vm -->
 <div class="portletBody">
     #if ($alertMessage)<div class="alertMessage">$tlang.getString("gen.alert") $validator.escapeHtml($alertMessage)</div>#end
     <table class="itemSummary"  summary="$tlang.getString("gen.theassinf")">
@@ -85,5 +86,4 @@
 		</form>
 
 </div>
-
-
+<!-- end: chef_assignments_student_view_group_error.vm -->
